[gd_scene load_steps=10 format=3 uid="uid://dswfxggc17xr3"]

[ext_resource type="Script" uid="uid://c3uwa0gdwk1cy" path="res://scenes/menus/party_screen.gd" id="1_wgxl4"]
[ext_resource type="Texture2D" uid="uid://3nfpanty48va" path="res://assets/ui/panel_beigeLight.png" id="2_t8ff1"]
[ext_resource type="PackedScene" uid="uid://ungtvhyngc34" path="res://scenes/menus/party_slot_main.tscn" id="2_x3v3m"]
[ext_resource type="Shortcut" uid="uid://cofnn6d48msxh" path="res://scenes/menus/interact_shortcut.tres" id="4_u7bpa"]
[ext_resource type="Texture2D" uid="uid://ujghvquaawh2" path="res://assets/ui/panel_blue.png" id="5_ybr7a"]
[ext_resource type="PackedScene" uid="uid://qc51fa6s3uqi" path="res://scenes/menus/party_slot.tscn" id="6_wgxl4"]
[ext_resource type="Texture2D" uid="uid://en456rclestl" path="res://assets/ui/menu_cancel.png" id="6_ybr7a"]
[ext_resource type="Texture2D" uid="uid://sunxn08nsjro" path="res://assets/ui/menu_cancel_hover.png" id="7_a2588"]
[ext_resource type="StyleBox" uid="uid://dqdeaqixjmvf3" path="res://scenes/themes/selection_arrow_box.tres" id="8_a2588"]

[node name="PartyScreen" type="CanvasLayer" node_paths=PackedStringArray("slots_container", "slot_options", "cancel_button", "send_out_option", "summary_option", "switch_option", "item_option")]
script = ExtResource("1_wgxl4")
slots_container = NodePath("Control/Background/Slots")
slot_options = NodePath("Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer")
cancel_button = NodePath("Control/Background/MarginContainer/HBoxContainer/Cancel")
send_out_option = NodePath("Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/SendOut")
summary_option = NodePath("Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/Summary")
switch_option = NodePath("Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/Switch")
item_option = NodePath("Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/Item")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t8ff1")

[node name="Slots" type="Node" parent="Control/Background"]

[node name="PartySlotMain" parent="Control/Background/Slots" node_paths=PackedStringArray("shortcut_context") instance=ExtResource("2_x3v3m")]
visible = false
offset_left = 6.0
offset_top = 65.0
offset_right = 275.0
offset_bottom = 270.0
focus_neighbor_left = NodePath("../../MarginContainer/HBoxContainer/Cancel")
focus_neighbor_top = NodePath("../../MarginContainer/HBoxContainer/Cancel")
focus_neighbor_right = NodePath("../PartySlot2")
focus_neighbor_bottom = NodePath("../PartySlot2")
focus_next = NodePath("../PartySlot2")
focus_previous = NodePath("../../MarginContainer/HBoxContainer/Cancel")
shortcut_context = NodePath(".")
shortcut = ExtResource("4_u7bpa")

[node name="PartySlot2" parent="Control/Background/Slots" node_paths=PackedStringArray("shortcut_context") instance=ExtResource("6_wgxl4")]
visible = false
anchor_right = 0.991
anchor_bottom = 0.2
offset_left = 281.0
offset_top = 32.0
offset_right = 0.911987
offset_bottom = 3.8
grow_horizontal = 1
grow_vertical = 1
focus_neighbor_left = NodePath("../PartySlotMain")
focus_neighbor_top = NodePath("../PartySlotMain")
focus_neighbor_right = NodePath("../PartySlot3")
focus_neighbor_bottom = NodePath("../PartySlot3")
focus_next = NodePath("../PartySlot3")
focus_previous = NodePath("../PartySlotMain")
shortcut_context = NodePath(".")
shortcut = ExtResource("4_u7bpa")

[node name="PartySlot3" parent="Control/Background/Slots" node_paths=PackedStringArray("shortcut_context") instance=ExtResource("6_wgxl4")]
visible = false
anchor_right = 0.991
anchor_bottom = 0.2
offset_left = 281.0
offset_top = 119.0
offset_right = 0.911987
offset_bottom = 90.8
grow_horizontal = 1
grow_vertical = 1
focus_neighbor_left = NodePath("../PartySlotMain")
focus_neighbor_top = NodePath("../PartySlot2")
focus_neighbor_right = NodePath("../PartySlot4")
focus_neighbor_bottom = NodePath("../PartySlot4")
focus_next = NodePath("../PartySlot4")
focus_previous = NodePath("../PartySlot2")
shortcut_context = NodePath(".")
shortcut = ExtResource("4_u7bpa")

[node name="PartySlot4" parent="Control/Background/Slots" node_paths=PackedStringArray("shortcut_context") instance=ExtResource("6_wgxl4")]
visible = false
anchor_right = 0.991
anchor_bottom = 0.2
offset_left = 281.0
offset_top = 205.0
offset_right = 0.911987
offset_bottom = 176.8
grow_horizontal = 1
grow_vertical = 1
focus_neighbor_left = NodePath("../PartySlotMain")
focus_neighbor_top = NodePath("../PartySlot3")
focus_neighbor_right = NodePath("../PartySlot5")
focus_neighbor_bottom = NodePath("../PartySlot5")
focus_next = NodePath("../PartySlot5")
focus_previous = NodePath("../PartySlot3")
shortcut_context = NodePath(".")
shortcut = ExtResource("4_u7bpa")

[node name="PartySlot5" parent="Control/Background/Slots" node_paths=PackedStringArray("shortcut_context") instance=ExtResource("6_wgxl4")]
visible = false
anchor_right = 0.991
anchor_bottom = 0.2
offset_left = 281.0
offset_top = 291.0
offset_right = 0.911987
offset_bottom = 262.8
grow_horizontal = 1
grow_vertical = 1
focus_neighbor_left = NodePath("../PartySlotMain")
focus_neighbor_top = NodePath("../PartySlot4")
focus_neighbor_right = NodePath("../PartySlot6")
focus_neighbor_bottom = NodePath("../PartySlot6")
focus_next = NodePath("../PartySlot6")
focus_previous = NodePath("../PartySlot4")
shortcut_context = NodePath(".")
shortcut = ExtResource("4_u7bpa")

[node name="PartySlot6" parent="Control/Background/Slots" node_paths=PackedStringArray("shortcut_context") instance=ExtResource("6_wgxl4")]
visible = false
anchor_right = 0.991
anchor_bottom = 0.2
offset_left = 281.0
offset_top = 378.0
offset_right = 0.911987
offset_bottom = 349.8
grow_horizontal = 1
grow_vertical = 1
focus_neighbor_left = NodePath("../PartySlotMain")
focus_neighbor_top = NodePath("../PartySlot5")
focus_neighbor_right = NodePath("../../MarginContainer/HBoxContainer/Cancel")
focus_neighbor_bottom = NodePath("../../MarginContainer/HBoxContainer/Cancel")
focus_next = NodePath("../../MarginContainer/HBoxContainer/Cancel")
focus_previous = NodePath("../PartySlot5")
shortcut_context = NodePath(".")
shortcut = ExtResource("4_u7bpa")

[node name="MarginContainer" type="MarginContainer" parent="Control/Background"]
z_index = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -91.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="MessageBox" type="NinePatchRect" parent="Control/Background/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_ybr7a")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="Label" type="Label" parent="Control/Background/MarginContainer/HBoxContainer/MessageBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.5
anchor_right = 0.019
anchor_bottom = 0.5
offset_left = 1.733
offset_top = -8.5
offset_right = 184.733
offset_bottom = 8.5
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/shadow_outline_size = 4
text = "Choose a POKÃ©MON."

[node name="Cancel" type="TextureButton" parent="Control/Background/MarginContainer/HBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(244, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../../Slots/PartySlotMain")
focus_neighbor_top = NodePath("../../../Slots/PartySlot6")
focus_neighbor_right = NodePath("../../../Slots/PartySlot6")
focus_neighbor_bottom = NodePath("../../../Slots/PartySlotMain")
focus_next = NodePath("../../../Slots/PartySlotMain")
focus_previous = NodePath("../../../Slots/PartySlot6")
shortcut_context = NodePath(".")
shortcut = ExtResource("4_u7bpa")
texture_normal = ExtResource("6_ybr7a")
texture_focused = ExtResource("7_a2588")
stretch_mode = 0

[node name="Label" type="Label" parent="Control/Background/MarginContainer/HBoxContainer/Cancel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.439
anchor_top = 0.349
anchor_right = 0.873
anchor_bottom = 0.628
offset_left = -0.116005
offset_top = -5.014
offset_right = 0.987991
offset_bottom = 6.992
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/shadow_outline_size = 3
text = "CANCEL"

[node name="SlotOptions" type="Control" parent="Control/Background/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(201, 0)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.953488
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ybr7a")
patch_margin_left = 9
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="SendOut" type="Button" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
visible = false
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
shortcut_context = NodePath(".")
theme_override_styles/focus = ExtResource("8_a2588")
shortcut = ExtResource("4_u7bpa")
flat = true

[node name="Label" type="Label" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/SendOut"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/shadow_outline_size = 3
text = "  SEND OUT"

[node name="Summary" type="Button" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
shortcut_context = NodePath(".")
theme_override_styles/focus = ExtResource("8_a2588")
shortcut = ExtResource("4_u7bpa")
flat = true

[node name="Label" type="Label" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/Summary"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/shadow_outline_size = 3
text = "  SUMMARY"

[node name="Switch" type="Button" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
shortcut_context = NodePath(".")
theme_override_styles/focus = ExtResource("8_a2588")
shortcut = ExtResource("4_u7bpa")
flat = true

[node name="Label" type="Label" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/Switch"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/shadow_outline_size = 3
text = "  SWITCH"

[node name="Item" type="Button" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
shortcut_context = NodePath(".")
theme_override_styles/focus = ExtResource("8_a2588")
shortcut = ExtResource("4_u7bpa")
flat = true

[node name="Label" type="Label" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/Item"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/shadow_outline_size = 3
text = "  ITEM"

[node name="SlotCancel" type="Button" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
shortcut_context = NodePath(".")
theme_override_styles/focus = ExtResource("8_a2588")
shortcut = ExtResource("4_u7bpa")
flat = true

[node name="Label" type="Label" parent="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/SlotCancel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.458824, 0.458824, 0.458824, 1)
theme_override_constants/shadow_outline_size = 3
text = "  CANCEL"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="visibility_changed" from="." to="Control/Background/Slots/PartySlotMain" method="_on_parent_visibility_changed"]
[connection signal="visibility_changed" from="." to="Control/Background/Slots/PartySlot2" method="_on_parent_visibility_changed"]
[connection signal="visibility_changed" from="." to="Control/Background/Slots/PartySlot3" method="_on_parent_visibility_changed"]
[connection signal="visibility_changed" from="." to="Control/Background/Slots/PartySlot4" method="_on_parent_visibility_changed"]
[connection signal="visibility_changed" from="." to="Control/Background/Slots/PartySlot5" method="_on_parent_visibility_changed"]
[connection signal="visibility_changed" from="." to="Control/Background/Slots/PartySlot6" method="_on_parent_visibility_changed"]
[connection signal="pressed" from="Control/Background/Slots/PartySlotMain" to="." method="_on_party_slot_pressed" binds= [0]]
[connection signal="pressed" from="Control/Background/Slots/PartySlot2" to="." method="_on_party_slot_pressed" binds= [1]]
[connection signal="pressed" from="Control/Background/Slots/PartySlot3" to="." method="_on_party_slot_pressed" binds= [2]]
[connection signal="pressed" from="Control/Background/Slots/PartySlot4" to="." method="_on_party_slot_pressed" binds= [3]]
[connection signal="pressed" from="Control/Background/Slots/PartySlot5" to="." method="_on_party_slot_pressed" binds= [4]]
[connection signal="pressed" from="Control/Background/Slots/PartySlot6" to="." method="_on_party_slot_pressed" binds= [5]]
[connection signal="focus_entered" from="Control/Background/MarginContainer/HBoxContainer/Cancel" to="." method="_on_cancel_focus_entered"]
[connection signal="focus_exited" from="Control/Background/MarginContainer/HBoxContainer/Cancel" to="." method="_on_cancel_focus_exited"]
[connection signal="pressed" from="Control/Background/MarginContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/SendOut" to="." method="_on_send_out_pressed"]
[connection signal="pressed" from="Control/Background/MarginContainer/HBoxContainer/SlotOptions/NinePatchRect/MarginContainer/VBoxContainer/SlotCancel" to="." method="_on_slot_cancel_pressed"]
